samples/_failures_safe/1761163073_b26bfd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3377c2f0.c: In function ‘main’:
./samples/SAFE/__tmp_3377c2f0.c:152:5: error: expected declaration or statement at end of input
  152 |     }
      |     ^
